# tenter

./: .gitignore  .tenter.json  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/tenter/: __init__.py  __main__.py  core.py
tests/: test_tenter.py
